[package]
name = "quadbtree"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
smallvec="1.6"
savefile = "0.9"
savefile-derive = "0.9"
indexmap="1.6"
[dev-dependencies]
rand = "0.8"
rand_pcg = "0.3"
